component로 html 줄이기

--- a/study/src/App.css
+++ b/study/src/App.css
@@ -4,6 +4,11 @@
 body{
   font-family: 'nanumsqueare';
 }
+.modal {
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #eee;;
+}
 .black-nav {
   background: black;
   width: 100%;
@@ -12,6 +17,12 @@ body{
   padding: 20px;
   font-weight: 600;
   font-size: 209x;
+}
+.list {
+  margin-top: 30px;
+  text-align: left;
+  padding-left: 20px;;
+  padding-right: 20px;
 }
 .App-logo {
   height: 40vmin;
@@ -34,12 +45,7 @@ body{
   font-size: calc(10px + 2vmin);
   color: white;
 }
-.list {
-  margin-top: 30px;
-  text-align: left;
-  padding-left: 20px;;
-  padding-right: 20px;
-}
+
 
 .App-link {
   color: #61dafb;
